# meta_ad_download

./: .gitignore  AD_LOCALIZER_BUILD_PLAN.md  generate_caption_data.py  meta_ad_downloader.py  pexels_downloader.py
lumalocal/: package-lock.json  package.json
lumalocal/src/app/: globals.css  layout.tsx  page.tsx
lumalocal/src/components/: Demo.tsx  FinalCTA.tsx  Footer.tsx  Globe.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  Problem.tsx  SocialProof.tsx  Solution.tsx  UseCases.tsx
translate_code/: .gitignore  Makefile  README.md  config.yaml  pyproject.toml
translate_code/scripts/: dub_only.py  dub_segments.py  lipsync_only.py
translate_code/src/ad_localizer/: cli.py  config.py  ffmpeg_utils.py  models.py  pipeline.py  segmentation.py  separation.py  timeline.py
translate_code/src/ad_localizer/providers/: base.py  fakes.py  polling.py
translate_code/src/ad_localizer/providers/lipsync/: syncso.py
translate_code/src/ad_localizer/providers/onscreen_text/: vozo.py
translate_code/src/ad_localizer/providers/transcription/: scribe.py  whisper.py
translate_code/src/ad_localizer/providers/translation/: translator.py
translate_code/src/ad_localizer/providers/voice/: elevenlabs.py
translate_code/tests/: conftest.py  test_contracts.py  test_pipeline.py  test_polling.py
translate_code/tests/providers/: test_ffmpeg_utils.py
